# aces-ble

./: Cargo.toml  LICENSE  README.md  shell.nix
.cargo/: config.toml
.github/workflows/: build-and-test.yml
aces/: Cargo.toml
aces/src/: checksum.rs  detail.rs  lib.rs  message.rs  ntc.rs  protect.rs  protection_of_state.rs  request.rs  response.rs  util.rs  voltage.rs
client-esp/: Cargo.toml
client-esp/.cargo/: config.toml
client-macos/: Cargo.toml
esp/: Cargo.toml
esp-client/: Cargo.toml
esp-client/.cargo/: config.toml
esp-client/src/: main.rs  notifications.rs
esp-server/: Cargo.toml
esp-server/.cargo/: config.toml
esp-server/src/: channel.rs  main.rs
esp/src/: main.rs  notifications.rs
macos/: Cargo.toml
macos-client/: Cargo.toml
macos-client/src/: main.rs  notifications.rs
macos/src/: main.rs  notifications.rs
runner-esp/: Cargo.toml  sdkconfig.defaults
runner-esp/.cargo/: config.toml
runner-esp/src/: main.rs
runner-macos/: Cargo.toml
server-esp/: Cargo.toml  sdkconfig.defaults
server-esp/.cargo/: config.toml
server-esp/src/: channel.rs
src/: aces.rs  main.rs
src/aces/: detail.rs  message.rs  mod.rs  ntc.rs  protect.rs  util.rs  voltage.rs
