[package]
name = "macos-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aces = { path = "../aces" }
thiserror.workspace = true
log.workspace = true
env_logger = "0"
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
futures = "0"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
